Cabal-version:        2.2
Name:                 clash-shake
Version:              1.3.0
Description:
  Utilities to create a Shake build file for Clash projects. Provides
  basic integration with Verilator and Vivado.
Homepage:             https://clash-lang.org/
bug-reports:          https://github.com/clash-lang/clash-compiler/issues
License:              BSD-2-Clause
License-file:         LICENSE
Author:               The Clash Authors
Maintainer:           QBayLogic B.V. <devops@qbaylogic.com>
Copyright:            Copyright © 2019-2020, Gergő Érdi
                                  2020,      QBayLogic B.V.
Category:             Hardware
Build-type:           Simple

source-repository head
  type: git
  location: https://github.com/clash-lang/clash-compiler.git
  subdir: clash-shake

common common-options
  default-language:   Haskell2010
  default-extensions: BangPatterns
                      BinaryLiterals
                      DataKinds
                      DefaultSignatures
                      DeriveDataTypeable
                      DeriveFoldable
                      DeriveFunctor
                      DeriveGeneric
                      DeriveLift
                      DeriveTraversable
                      DerivingStrategies
                      InstanceSigs
                      KindSignatures
                      ScopedTypeVariables
                      StandaloneDeriving
                      TupleSections
                      TypeApplications
                      TypeOperators
                      ViewPatterns

  if impl(ghc >= 8.6)
      default-extensions: NoStarIsType


Library
  import:             common-options
  HS-Source-Dirs:     src

  ghc-options:        -Wall
  CPP-Options:        -DCABAL

  Build-depends:      base >= 4.10 && < 5,
                      bytestring >= 0.10.0.2 && < 0.11,
                      clash-ghc == 1.3.0,
                      clash-lib,
                      clash-prelude,
                      containers >= 0.5.11.0  && < 0.7,
                      directory >= 1.3 && < 1.4,
                      mtl >= 2.2 && < 2.3,
                      mustache >= 2.3 && < 2.4,
                      shake >= 0.18 && < 0.19,
                      text >= 1.2 && < 1.3,
                      unordered-containers >= 0.2.3.3 && < 0.3

  Autogen-Modules:    Paths_clash_shake

  Exposed-modules:    Clash.Shake

  Other-modules:      Paths_clash_shake

