Name:                 clash-term
Version:              0.0.0
Synopsis:             CAES Language for Synchronous Hardware
Description:          Terminal-based inspection mechanism for optimization phases.
Homepage:             https://clash-lang.org/
bug-reports:          https://github.com/clash-lang/clash-compiler/issues
License:              BSD2
License-file:         LICENSE
Author:               Orestis Melkonian
Maintainer:           Orestis Melkonian <melkon.or@gmail.com>
Copyright:            Copyright © 2019, QBayLogic B.V.
Category:             Terminal
Build-type:           Simple

Extra-source-files:   README.md
                      theme.ini

Cabal-version:        >=1.10

source-repository head
  type: git
  location: https://github.com/clash-lang/clash-compiler.git
  subdir: clash-term

executable clash-term
  Main-Is:            Main.hs
  Build-Depends:      base              >= 4.3.1.0  && < 5,
                      clash-lib,
                      binary            >= 0.8.5    && < 0.11,
                      bytestring        >= 0.10.0.2 && < 0.12,
                      rewrite-inspector == 0.1.0.11

  GHC-Options:        -Wall -Wcompat -threaded
  extra-libraries:    pthread
  default-language:   Haskell2010
  if os(windows)
    buildable: False
