Name:                 clash-verilog
Version:              0.6.10
Synopsis:             CAES Language for Synchronous Hardware - Verilog backend
Description:
  CλaSH (pronounced ‘clash’) is a functional hardware description language that
  borrows both its syntax and semantics from the functional programming language
  Haskell. The CλaSH compiler transforms these high-level descriptions to
  low-level synthesizable VHDL, Verilog, or SystemVerilog.
  .
  Features of CλaSH:
  .
  * Strongly typed (like VHDL), yet with a very high degree of type inference,
    enabling both safe and fast prototying using consise descriptions (like
    Verilog).
  .
  * Interactive REPL: load your designs in an interpreter and easily test all
    your component without needing to setup a test bench.
  .
  * Higher-order functions, with type inference, result in designs that are
    fully parametric by default.
  .
  * Synchronous sequential circuit design based on streams of values, called
    @Signal@s, lead to natural descriptions of feedback loops.
  .
  * Support for multiple clock domains, with type safe clock domain crossing.
  .
  .
  This package provides:
  .
  * Verilog Backend
Homepage:             http://www.clash-lang.org/
bug-reports:          http://github.com/clash-lang/clash-compiler/issues
License:              BSD2
License-file:         LICENSE
Author:               Christiaan Baaij
Maintainer:           Christiaan Baaij <christiaan.baaij@gmail.com>
Copyright:            Copyright © 2015-2016 University of Twente
Category:             Hardware
Build-type:           Simple

Extra-source-files:   README.md,
                      CHANGELOG.md

Data-files:           primitives/CLaSH.Driver.TestbenchGen.json
                      primitives/CLaSH.Driver.TopWrapper.json
                      primitives/CLaSH.GHC.GHC2Core.json
                      primitives/CLaSH.Prelude.BlockRam.json
                      primitives/CLaSH.Prelude.BlockRam.File.json
                      primitives/CLaSH.Prelude.RAM.json
                      primitives/CLaSH.Prelude.ROM.json
                      primitives/CLaSH.Prelude.ROM.File.json
                      primitives/CLaSH.Prelude.Testbench.json
                      primitives/CLaSH.Promoted.Nat.json
                      primitives/CLaSH.Promoted.Nat.Unsafe.json
                      primitives/CLaSH.Promoted.Symbol.json
                      primitives/CLaSH.Signal.Bundle.json
                      primitives/CLaSH.Signal.Explicit.json
                      primitives/CLaSH.Signal.Internal.json
                      primitives/CLaSH.Sized.Internal.BitVector.json
                      primitives/CLaSH.Sized.Internal.Index.json
                      primitives/CLaSH.Sized.Internal.Signed.json
                      primitives/CLaSH.Sized.Internal.Unsigned.json
                      primitives/CLaSH.Sized.Vector.json
                      primitives/CLaSH.Transformations.json
                      primitives/Control.Exception.Base.json
                      primitives/Debug.Trace.json
                      primitives/GHC.Base.json
                      primitives/GHC.Classes.json
                      primitives/GHC.CString.json
                      primitives/GHC.Err.json
                      primitives/GHC.Int.json
                      primitives/GHC.Integer.Type.json
                      primitives/GHC.Prim.json
                      primitives/GHC.Real.json
                      primitives/GHC.Typelits.json
                      primitives/GHC.Types.json
                      primitives/GHC.Word.json
                      primitives/Unsafe.Coerce.json

Cabal-version:        >=1.10

source-repository head
  type: git
  location: https://github.com/clash-lang/clash-compiler.git

Library
  HS-Source-Dirs:     src

  default-language:   Haskell2010
  ghc-options:        -Wall
  CPP-Options:        -DCABAL

  other-extensions:   CPP
                      OverloadedStrings
                      RecursiveDo
                      TemplateHaskell
                      TupleSections
                      ViewPatterns

  Build-depends:      base                    >= 4.6.0.1  && < 5,
                      clash-lib               >= 0.6.18   && < 0.7,
                      clash-prelude           >= 0.10.1   && < 0.11,
                      fgl                     >= 5.4.2.4  && < 5.6,
                      lens                    >= 3.9.2    && < 4.16,
                      mtl                     >= 2.1.2    && < 2.3,
                      text                    >= 0.11.3.1 && < 1.3,
                      unordered-containers    >= 0.2.3.3  && < 0.3,
                      wl-pprint-text          >= 1.1.0.0  && < 1.2

  Exposed-modules:    CLaSH.Backend.Verilog

  other-modules:      Paths_clash_verilog
