cabal-version:       2.4

name:                clash-testsuite
version:             0.0.0
synopsis:            Clash Testsuite
-- description:
homepage:            https://clash-lang.org/
license:             BSD-2-Clause
license-file:        LICENSE
author:              Christiaan Baaij
maintainer:          Christiaan Baaij <christiaan.baaij@gmail.com>
copyright:           Copyright © 2015 University of Twente
category:            Testing
build-type:          Simple

flag cosim
   description:
     Run the co-simulation tests
   default: False
   manual: True

flag multiple-hidden
  description:
    Allow multiple hidden clocks, resets, and enables to be used. This is an
    experimental feature, possibly triggering confusing error messages. By
    default, it is enabled on development versions of Clash and disabled on
    releases.
  default: True
  manual: True

common basic-config
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat

  default-extensions:
    BangPatterns
    BinaryLiterals
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    MagicHash
    NoStarIsType
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -fexpose-all-unfoldings
    -fno-worker-wrapper

  build-depends:
    base,
    aeson,
    data-default,
    directory,
    filepath,
    ghc,
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,
    Glob,
    ieee754,
    neat-interpolation,
    optparse-applicative,
    process,
    tagged,
    tasty,
    tasty-hunit,
    temporary,
    text,

    -- Strictly we don't need these dependencies for the
    -- testsuite to compile, but we do when running it.
    -- Leaving it out will cause the testsuite to compile
    -- it anyway so we're better off doing it beforehand.
    clash-ghc,
    clash-lib,
    clash-prelude

  if flag(cosim)
    build-depends:     clash-cosim

  if flag(cosim)
    cpp-options:       -DCOSIM

  if flag(multiple-hidden)
    cpp-options:       -DCLASH_MULTIPLE_HIDDEN

library
  import: basic-config
  hs-source-dirs:
    src,
    -- Behaviour when loading modules can differ if the module is loaded from
    -- an external interface file. See
    -- https://github.com/clash-lang/clash-compiler/issues/1796 for an example.
    shouldwork/LoadModules/Issues
    shouldwork/LoadModules/BlockRam

  exposed-modules:
    Test.Tasty.Common
    Test.Tasty.Clash
    Test.Tasty.Clash.CoreTest
    Test.Tasty.Clash.NetlistTest
    Test.Tasty.Ghdl
    Test.Tasty.Iverilog
    Test.Tasty.Modelsim
    Test.Tasty.SymbiYosys
    Test.Tasty.Program
    Test.Tasty.Verilator
    Test.Tasty.Clash.CollectSimResults

    -- From tests/shouldwork/LoadModules
    T1796
    DualBlockRamTypes
    DualBlockRamDefinitions
    DualBlockRam

  build-depends:
    deepseq,
    concurrent-extra,
    singletons,
    generic-lens,
    interpolate,
    mtl,
    concurrent-supply,
    unordered-containers,
    ordered-containers,
    containers,
    template-haskell


executable clash-testsuite
  import:              basic-config
  main-is:             Main.hs
  ghc-options:         -threaded -with-rtsopts=-N

  build-tool-depends:
    clash-ghc:clash

  build-depends:
    containers,
    clash-testsuite

  if impl(ghc >= 9.0.0)
    build-depends:
      singletons,
      singletons-base,
      singletons-th
  else
    build-depends:
      singletons < 3.0
