cabal-version:       2.4

name:                clash-testsuite
version:             0.0.0
synopsis:            Clash Testsuite
-- description:
homepage:            https://clash-lang.org/
license:             BSD-2-Clause
license-file:        LICENSE
author:              Christiaan Baaij
maintainer:          Christiaan Baaij <christiaan.baaij@gmail.com>
copyright:           Copyright © 2015 University of Twente
                                 2022 QBayLogic B.V.
category:            Testing
build-type:          Simple
data-files:
  data-files/tcl/clash_namespace.tcl

flag cosim
   description:
     Run the co-simulation tests
   default: False
   manual: True

flag multiple-hidden
  description:
    Allow multiple hidden clocks, resets, and enables to be used. This is an
    experimental feature, possibly triggering confusing error messages. By
    default, it is enabled on development versions of Clash and disabled on
    releases.
  default: False
  manual: True

flag workaround-ghc-mmap-crash
  description:
    Only use this flag when hit by GHC bug #19421. See clash-compiler PR #2444.
  default: False
  manual: True

common basic-config
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat

  default-extensions:
    DeriveDataTypeable
    OverloadedStrings
    ViewPatterns

  ghc-options:
    -fexpose-all-unfoldings
    -fno-worker-wrapper

  build-depends:
    base,
    aeson,
    data-default,
    directory,
    filepath,
    ghc,
    Glob,
    ieee754,
    string-interpolate,
    optparse-applicative,
    process,
    tagged,
    tasty >= 1.5,
    tasty-hunit,
    temporary,
    text,

    -- Strictly we don't need these dependencies for the
    -- testsuite to compile, but we do when running it.
    -- Leaving it out will cause the testsuite to compile
    -- it anyway so we're better off doing it beforehand.
    clash-cores,
    clash-ghc,
    clash-lib,
    clash-prelude

  -- See https://github.com/clash-lang/clash-compiler/pull/2511
  if impl(ghc >= 9.4)
    CPP-Options: -DCLASH_OPAQUE=OPAQUE
  else
    CPP-Options: -DCLASH_OPAQUE=NOINLINE

  if flag(cosim)
    build-depends:     clash-cosim

  if flag(cosim)
    cpp-options:       -DCOSIM

  if flag(multiple-hidden)
    cpp-options:       -DCLASH_MULTIPLE_HIDDEN

  if arch(x86_64) && flag(workaround-ghc-mmap-crash)
    cpp-options:       -DCLASH_WORKAROUND_GHC_MMAP_CRASH

library
  import: basic-config
  hs-source-dirs:
    src,
    -- Behaviour when loading modules can differ if the module is loaded from
    -- an external interface file. See
    -- https://github.com/clash-lang/clash-compiler/issues/1796 for an example.
    shouldwork/LoadModules/precompiled
    shouldwork/Basic/precompiled

  exposed-modules:
    Test.Tasty.Common
    Test.Tasty.Clash
    Test.Tasty.Clash.CoreTest
    Test.Tasty.Clash.NetlistTest
    Test.Tasty.Ghdl
    Test.Tasty.Iverilog
    Test.Tasty.Modelsim
    Test.Tasty.SymbiYosys
    Test.Tasty.Program
    Test.Tasty.Verilator
    Test.Tasty.Vivado
    Test.Tasty.Clash.CollectSimResults

    -- From tests/shouldwork/LoadModules/precompiled
    T1796a

    -- From tests/shouldwork/Basic/precompiled
    SimulationMagic2736a

  other-modules:
    Paths_clash_testsuite

  autogen-modules:
    Paths_clash_testsuite

  build-depends:
    extra,
    deepseq,
    concurrent-extra,
    singletons,
    generic-lens,
    mtl,
    unordered-containers,
    ordered-containers,
    containers,
    template-haskell,
    regex-tdfa >=1.3.1.0


executable clash-testsuite
  import:              basic-config
  main-is:             Main.hs

  build-tool-depends:
    clash-ghc:clash

  build-depends:
    containers,
    clash-testsuite

  if impl(ghc >= 9.0.0)
    build-depends:
      singletons,
      singletons-base,
      singletons-th
  else
    build-depends:
      singletons < 3.0
