cabal-version:       2.2

name:                clash-testsuite
version:             0.0.0
synopsis:            Clash Testsuite
-- description:
homepage:            https://clash-lang.org/
license:             BSD-2-Clause
license-file:        LICENSE
author:              Christiaan Baaij
maintainer:          Christiaan Baaij <christiaan.baaij@gmail.com>
copyright:           Copyright © 2015 University of Twente
category:            Testing
build-type:          Simple
-- extra-source-files:

flag cosim
   description:
     Run the co-simulation tests
   default: False
   manual: True

common basic-config
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat

  default-extensions:
    DeriveDataTypeable
    OverloadedStrings
    ViewPatterns

  build-depends:
    base                >=4.10 && <5,
    aeson,
    data-default        >=0.7  && <0.8,
    directory           >=1.2  && <1.4,
    filepath            >=1.4  && <1.5,
    ghc,
    Glob                >=0.9  && <1.0,
    neat-interpolation  >=0.3  && <0.4,
    process             >=1.2  && <1.7,
    tasty               >=1.2  && <1.3,
    tasty-hunit,
    temporary,
    text,

    -- Strictly we don't need these dependencies for the
    -- testsuite to compile, but we do when running it.
    -- Leaving it out will cause the testsuite to compile
    -- it anyway so we're better off doing it beforehand.
    clash-ghc,
    clash-lib,
    clash-prelude

  if flag(cosim)
    build-depends:     clash-cosim

  if flag(cosim)
    cpp-options:       -DCOSIM

library
  import: basic-config
  hs-source-dirs: src

  exposed-modules:
    Test.Tasty.Clash
    Test.Tasty.Clash.NetlistTest
    Test.Tasty.Program

  build-depends:
    deepseq            >=1.4      && <1.5,
    concurrent-extra   >=0.7      && <0.8,
    generic-lens,
    interpolate,
    mtl,
    concurrent-supply,
    unordered-containers,
    containers,


executable clash-testsuite
  import:              basic-config
  main-is:             Main.hs
  ghc-options:         -threaded -with-rtsopts=-N

  build-depends:
    clash-testsuite

