cabal-version:       2.2

name:                clash-testsuite
version:             0.0.0
synopsis:            Clash Testsuite
-- description:
homepage:            https://clash-lang.org/
license:             BSD-2-Clause
license-file:        LICENSE
author:              Christiaan Baaij
maintainer:          Christiaan Baaij <christiaan.baaij@gmail.com>
copyright:           Copyright © 2015 University of Twente
category:            Testing
build-type:          Simple
-- extra-source-files:

flag cosim
   description:
     Run the co-simulation tests
   default: False
   manual: True

flag experimental-evaluator
  description:
    Use the new partial evaluator (experimental; may break)
  default: False
  manual: True

common basic-config
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat

  default-extensions:
    DeriveDataTypeable
    OverloadedStrings
    ViewPatterns

  ghc-options:
    -fexpose-all-unfoldings
    -fno-worker-wrapper

  build-depends:
    base                >=4.10 && <5,
    aeson,
    data-default        >=0.7  && <0.8,
    directory           >=1.2  && <1.4,
    filepath            >=1.4  && <1.5,
    ghc,
    Glob                >=0.9  && <1.0,
    neat-interpolation  >=0.3  && <0.6,
    process             >=1.2  && <1.7,
    tasty               >=1.2  && <1.4,
    tasty-hunit,
    temporary,
    text,

    -- Strictly we don't need these dependencies for the
    -- testsuite to compile, but we do when running it.
    -- Leaving it out will cause the testsuite to compile
    -- it anyway so we're better off doing it beforehand.
    clash-ghc,
    clash-lib,
    clash-prelude

  if flag(cosim)
    build-depends:     clash-cosim

  if flag(cosim)
    cpp-options:       -DCOSIM

  if flag(experimental-evaluator)
    cpp-options:       -DEXPERIMENTAL_EVALUATOR

library
  import: basic-config
  hs-source-dirs:
    src,
    -- Behaviour when loading modules can differ if the module is loaded from
    -- an external interface file. See
    -- https://github.com/clash-lang/clash-compiler/issues/1796 for an example.
    --
    -- TODO: Cabal complains when source dirs are relative and outside the
    -- project dir. Should 'tests/' be moved inside 'testsuite/'?
    ../tests/shouldwork/LoadModules

  exposed-modules:
    Test.Tasty.Clash
    Test.Tasty.Clash.CoreTest
    Test.Tasty.Clash.NetlistTest
    Test.Tasty.Program

    -- From tests/shouldwork/LoadModules
    T1796

  build-depends:
    deepseq            >=1.4      && <1.5,
    concurrent-extra   >=0.7      && <0.8,
    singletons,
    generic-lens,
    interpolate,
    mtl,
    concurrent-supply,
    unordered-containers,
    ordered-containers,
    containers,


executable clash-testsuite
  import:              basic-config
  main-is:             Main.hs
  ghc-options:         -threaded -with-rtsopts=-N

  build-tool-depends:
    clash-ghc:clash

  build-depends:
    containers,
    clash-testsuite

  if impl(ghc >= 9.0.0)
    build-depends:
      singletons,
      singletons-base,
      singletons-th
  else
    build-depends:
      singletons < 3.0
