cabal-version: 3.0
name: repro-packageid
version: 0.1.0.0
build-type: Simple

library
  exposed-modules: Repro.Public
                   Repro.PublicBB
  hs-source-dirs:  src
  build-depends:   base, clash-lib, clash-prelude, transformers
  default-language: Haskell2010

library internal
  exposed-modules: Repro.InternalBB
                   Repro.InternalTop
  hs-source-dirs:  internal
  build-depends:   base, clash-prelude, clash-lib, transformers
  default-language: Haskell2010
