cabal-version:      2.4
name:               clash-ffi-example
version:            0.1.0.0
synopsis:           Example Clash-FFI project
description:        Example Clash-FFI project
bug-reports:        https://github.com/clash-lang/clash-compiler/issues
license:            BSD-2-Clause
license-file:       LICENSE
author:             QBayLogic B.V.
maintainer:         devops@qbaylogic.com
copyright:          Copyright © 2023, QBayLogic B.V.
category:           Hardware

custom-setup
  setup-depends:
    base        >= 4.11  && < 5,
    Cabal       >= 2.4   && < 3.9,
    directory   >= 1.3.6 && < 1.4,
    filepath    >= 1.4.2 && < 1.5,

foreign-library clash-ffi-example
  default-language: Haskell2010
  other-modules:    Simulate
  includes:         vpi_user.h
  include-dirs:     ../include
  type:             native-shared
  lib-version-info: 0:1:0
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DeriveLift
    FlexibleContexts
    ImplicitParams
    LambdaCase
    NamedFieldPuns
    RecordWildCards
    TupleSections
    TypeApplications
    ViewPatterns
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver
  build-depends:
    base,
    bytestring,
    clash-ffi,
    clash-prelude,
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,
  cpp-options:
    -DVERILOG=1
    -DIVERILOG=1
    -DVERILOG_2001=1
    -DVERILOG_2005=1
    -DVPI_VECVAL=1
